--- a/css/stylesmob.css
+++ b/css/stylesmob.css
@@ -23,8 +23,9 @@
     padding-right: 16px;
     margin-left: auto;
     margin-right: auto;
-
 }
+
+
 
 .list {
     list-style: none;
@@ -60,6 +61,13 @@ img {
     max-width: 100%;
 }
 
+@media screen and (min-width: 480px) {
+    .container {
+        width: 480px;
+    }
+    
+}
+
 
 /*--------------------------------Header--------------------------------*/
 
@@ -81,158 +89,301 @@ img {
     text-transform: uppercase;
     color: var(--logo-color-first);
 
-    /* margin-top: 24px;
-    margin-bottom: 22px; */
 }
 
 .logo-studio {
     color: var(--logo-color-second);
 }
 
-.mobile-menu-open {
-    background-color: transparent;
-    border: none;
-    padding: 0;
+@media screen and (max-width: 768px) {
 
-    line-height: 0;
+    .sm-hide {
+        display: none;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .contact {
+        display: none;
+    }
+
 }
 
-.mobile-menu {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+@media screen and (max-width: 768px)  {
 
-    background: var(--color-white-text);
+    .mobile-menu-open {
+        background-color: transparent;
+        border: none;
+        padding: 0;
     
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-
-    transition: opacity var(--transition-duration) var(--transition-funct), visibility var(--transition-duration) var(--transition-funct);
-}
-
-.mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-
-}
-
-.container-mobile-menu {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-between;
-
-    position: relative;
-
-    padding-left: 40px;
-    padding-bottom: 40px;
-    padding-top: 80px;
-}
-
-
-.mobile-menu-close {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-
-    line-height: 0;
-    width: 24px;
-    height: 24px;
-
-    position: absolute;
-    top: 24px;
-    right: 16px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background: #E7E9FC;
-}
-
-.mobile-menu-list {
-
-}
-
-.mobile-menu-item:nth-child(-n+2) {
-    margin-bottom: 40px;
-}
-
-.mobile-menu-link {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--logo-color-second);
-}
-
-.mobile-menu-link-activ {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--accent-color); 
-}
-
-.mobile-contact-list {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+        line-height: 0;
+    }
     
-}
-
-.mobile-contact-tel {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--logo-color-first);
-
+    .mobile-menu {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
     
-}
-
-.mobile-contact-mail {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: var(--primary-text-color);
-
-}
-
-.mobile-menu-soc {
-    display: flex;
-    gap: 56px;
-    margin-top: 48px;
-}
-
-.mobile-soc-item {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #4D5AE5;
-}
-
-
-.mobile-soc-icon{
-    fill: var(--color-studiofooter-btnprof);
+        background: var(--color-white-text);
     
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    
+        transition: opacity var(--transition-duration) var(--transition-funct), visibility var(--transition-duration) var(--transition-funct);
+    }
+    
+    .mobile-menu.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    
+    }
+    
+    .container-mobile-menu {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-between;
+    
+        position: relative;
+    
+        padding-left: 40px;
+        padding-bottom: 40px;
+        padding-top: 80px;
+    }
+    
+    .mobile-menu-close {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+    
+        line-height: 0;
+        width: 24px;
+        height: 24px;
+    
+        position: absolute;
+        top: 24px;
+        right: 16px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        background: #E7E9FC;
+    }
+    
+    .mobile-menu-list {}
+    
+    .mobile-menu-item:nth-child(-n+2) {
+        margin-bottom: 40px;
+    }
+    
+    .mobile-menu-link {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: var(--logo-color-second);
+    }
+    
+    .mobile-menu-link-activ {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: var(--accent-color);
+    }
+    
+    .mobile-contact-list {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+    
+    .mobile-contact-tel {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: var(--logo-color-first);
+    }
+    
+    .mobile-contact-mail {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: var(--primary-text-color);
+    }
+    
+    .mobile-menu-soc {
+        display: flex;
+        gap: 56px;
+        margin-top: 48px;
+    }
+    
+    .mobile-soc-item {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #4D5AE5;
+    }
+    
+    .mobile-soc-icon {
+        fill: var(--color-studiofooter-btnprof);
+    
+    }
+    
+    .mobile-soc-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
 }
 
 
 
-.mobile-soc-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+
+@media screen and (min-width: 768px) {
+
+    .container {
+        width: 736px;
+    }
+
+    .header-container {
+        display: flex;
+        align-items: center;
+        
+        padding-top: 24px;
+        padding-bottom: 22px;
+    }
+    
+    
+    .contact {
+        display: block;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+
+    .mobile-menu-open {
+        display: none;
+    }
+
+    .nav-header {
+        display: flex;
+        align-items: center;
+        
+    }
+
+    .logo {
+        margin-right: 120px;
+    }
+
+    .nav {
+        display: flex;
+        gap: 40px;
+        margin-right: 121px;
+    }
+
+    .nav-link {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--logo-color-second);
+        position: relative;
+    
+        transition: color var(--transition-duration) var(--transition-funct);
+    }
+
+    .nav-link:hover,
+    .nav-link:focus {
+        color: var(--accent-color);
+    }
+    
+    .current-studio {
+        color: var(--accent-color);
+    }
+    
+    .current-portfolio {
+        color: var(--accent-color);
+    }
+    
+    .current-studio::after {
+        content: '';
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        border-radius: 2px;
+        display: inline-block;
+        position: absolute;
+        top: 43px;
+        left: 0px;
+    
+    }
+    
+    .current-portfolio::after {
+        content: '';
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        border-radius: 2px;
+        display: inline-block;
+        position: absolute;
+        top: 43px;
+        left: 0px;
+    }
+
+    .contact-link {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--primary-text-color);
+    
+        transition: color var(--transition-duration) var(--transition-funct);
+    }
+    
+    .contact-menu {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+    
+    .contact-link:hover,
+    .contact-link:focus {
+        color: var(--accent-color);
+    }
+
 }
+
+@media screen and (min-width: 1158px) {
+    .container{
+        width: 1158px;
+    }
+
+    .contact-menu {
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
+    }
+
+
+}
+
+
+
 
 
 /* ==================================About company================================== */
@@ -386,7 +537,7 @@ img {
     } */
 }
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
 
     .sm-hide {
         display: none;
@@ -400,7 +551,7 @@ img {
         display: none;
     }
 
-}
+} */
 
 
 
@@ -410,30 +561,27 @@ img {
 
 @media screen and (min-width: 480px) {
 
-    .container {
+    /* .container {
         width: 428px
     }
 
     .sm-hide {
         display: none;
-    }
+    } */
 
-    .nav {
+    /* .nav {
         display: none;
-    }
+    } */
     
-    .contact {
+    /* .contact {
         display: none;
-    }
-
-
-
+    } */
 
 }
 
 @media screen and (min-width: 768px) {
 
-    .container {
+    /* .container {
         width: 768px
     }
 
@@ -447,7 +595,7 @@ img {
     
     .contact {
         display: block;
-    }
+    } */
 
 
 }
