--- a/css/styles.css
+++ b/css/styles.css
@@ -233,10 +233,7 @@ img {
 
 /*--------------------------------About company--------------------------------*/
 
-.section-about {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
+c
 
 
 .list-about {
@@ -535,7 +532,7 @@ img {
 .footer-form-title {
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-white-text);
 
@@ -547,21 +544,7 @@ img {
 
 }
 
-.footer-input {
-    width: 264px;
-    height: 40px;
-    background-color: transparent;
-    border: none;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    font-size: 14px;
-    color: var(--color-white-text);
-    outline: none;
-    border-radius: 4px;
-    padding-left: 16px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
+c
 
 .footer-input::placeholder {
     font-weight: 400;
