--- a/css/stylesmob.css
+++ b/css/stylesmob.css
@@ -894,13 +894,16 @@ img {
     flex-direction: column;
 
     align-items: center;
-    margin-right: auto;
-    margin-left: auto;
+    justify-content: center;
+    /* margin-right: auto;
+    margin-left: auto; */
 
 }
 
 .logo {
+    display: flex;
     align-items: center;
+    justify-content: center;
     margin-right: auto;
     margin-left: auto;
 }
@@ -930,9 +933,9 @@ img {
     margin-top: 16px;
 }
 
-.soc-media-div {
+/* .soc-media-div {
     width: 208px;
-}
+} */
 
 .soc-subtitle {
     font-weight: 500;
@@ -942,11 +945,16 @@ img {
     color: #FFFFFF;
 
     margin-top: 72px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .soc-madia-list {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 16px;
 
     margin-top: 16px;
@@ -976,6 +984,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-top: 72px;
+    width: 100%;
 }
 
 .footer-form-title {
@@ -985,11 +994,22 @@ img {
     letter-spacing: 0.02em;
     color: var(--color-white-text);
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     margin-bottom: 16px;
 }
 
+.footer-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .footer-input {
-    width: 398px;
+    width: 100%;
     height: 40px;
     background-color: transparent;
     border: none;
@@ -1033,9 +1053,25 @@ img {
     cursor: pointer;
     fill: var(--color-white-text);
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+@media screen and (min-width: 768px) {
+    .container-soc-media-fotter {
+        display: block;
+
+    }
+}
+
+@media screen and (min-width: 1158px) {
 
 }
+
+
+
+
+
 
 /*======================================//Footer======================================*/
 
