--- a/css/stylesmob.css
+++ b/css/stylesmob.css
@@ -19,8 +19,9 @@
 
 
 .container {
-    padding-left: 16px;
-    padding-right: 16px;
+    max-width: 428px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -59,23 +60,17 @@ img {
     max-width: 100%;
 }
 
-@media screen and (min-width: 428px) {
-    .container {
-        width: 428px;
-    }
-    
-}
 
 @media screen and (min-width: 768px) {
 
     .container {
-        width: 768px;
+        max-width: 768px;
     }
 }
 
 @media screen and (min-width: 1158px) {
     .container {
-        width: 1158px;
+        max-width: 1158px;
     }
 }
 
@@ -904,8 +899,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: auto;
-    margin-left: auto;
+    
 }
 
 .logo-footer {
@@ -1059,9 +1053,15 @@ img {
 
 @media screen and (min-width: 768px) {
     .container-soc-media-fotter {
-        display: block;
-
+        flex-wrap: wrap;
+        flex-direction: row;
+        
     }
+
+
+    .soc-subtitle {
+        margin-top: auto;
+    } 
 }
 
 @media screen and (min-width: 1158px) {
