--- a/css/stylesmob.css
+++ b/css/stylesmob.css
@@ -466,13 +466,10 @@ img {
     .modal-btn {
         margin-top: 36px;
 
-        transition: background-color var(--transition-duration) var(--transition-funct);
+        
     }
 
-    .modal-btn:hover,
-    .modal-btn:focus {
-        background-color: var(--accent-color);
-    }
+
 
 }
 
@@ -485,6 +482,12 @@ img {
     }
     .modal-btn {
         margin-top: 48px;
+        transition: background-color var(--transition-duration) var(--transition-funct);
+    }
+
+    .modal-btn:hover,
+    .modal-btn:focus {
+        background-color: var(--accent-color);
     }
 
 }
@@ -877,6 +880,27 @@ img {
 
 /*======================================Footer======================================*/
 
+@media screen and (min-width: 0px) and (max-width: 768px) {
+    .container-soc-media-fotter {
+        justify-content: center;
+    }
+
+    .footer-form-div {
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+
+    .footer-form-title {
+        justify-content: center;
+    }
+
+    .footer-form {
+        justify-content: center;
+    }
+}
+
+
 .footer {
     background-color: var(--logo-color-second);
     padding-top: 96px;
@@ -889,7 +913,7 @@ img {
     flex-direction: column;
 
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     /* margin-right: auto;
     margin-left: auto; */
 
@@ -975,10 +999,10 @@ img {
 }
 
 .footer-form-div {
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     margin-top: 72px;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .footer-form-title {
@@ -989,7 +1013,7 @@ img {
     color: var(--color-white-text);
 
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 
     margin-bottom: 16px;
@@ -998,7 +1022,7 @@ img {
 .footer-form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
@@ -1052,10 +1076,20 @@ img {
 }
 
 @media screen and (min-width: 768px) {
+
+    
+
+    .footer {
+        
+    }
+
+
     .container-soc-media-fotter {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+
+    
     
 
     }
@@ -1067,8 +1101,8 @@ img {
 
     .footer-form-div {
         min-width: 453px;
-        margin-left: 108px;
         margin-right: 0;
+        margin-left: 0;
         padding-left: 0;
     }
 
@@ -1076,7 +1110,7 @@ img {
         display: flex;
         flex-direction: row;
         align-items: baseline;
-        justify-content: center;
+        
         gap: var(--card-gap);
     }
 
@@ -1104,200 +1138,219 @@ img {
 }
 
 
-
-
-
-
 /*======================================//Footer======================================*/
 
 
 
+/*======================================Modal======================================*/
 
-/* @media screen and (max-width: 768px) {
-    .md-hide {
-        display: none;
-    }
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
 
-    .text-align-center-md {
-        text-align: center;
-    }
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    
 
-    .text-align-left-md {
-        text-align: left;
-    }
-    .w-md-1 {
-        width: 100%;
-    }
-
-    .w-md-1\/2 {
-        width: 50%;
-    }
-
-    .w-md-1\/3 {
-        width: 33.3333333%;
-    }
-
-    .w-md-1\/4 {
-        width: 25%;
-    }
+    transition: opacity var(--transition-duration) var(--transition-funct), visibility var(--transition-duration) var(--transition-funct);
 }
 
-@media screen and (max-width: 428px) {
-    .sm-hide {
-        display: none;
-    }
-    .text-align-center-sm {
-        text-align: center;
-    }
 
-    .w-sm-1 {
-        width: 100%;
-    }
-
-    .w-sm-1\/2 {
-        width: 50%;
-    }
-
-    .w-sm-1\/3 {
-        width: 33.3333333%;
-    }
-
-    .w-sm-1\/4 {
-        width: 25%;
-    }
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
 
-.w-1 {
-        width: 100%;
-}
-.w-1\/2 {
-    width: 50%;
-}
-.w-1\/3 {
-    width: 33.3333333%;
-}
-.w-1\/4 {
-    width: 25%;
-} */
+.modal {
+    width: 392px;
 
-/* ==================================Our Team================================== */
+    background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    padding: 72px 16px 16px;
 
-/* .team-section {
-    background-color: var(--color-studiofooter-btnprof);
-    padding-top: 96px;
-    padding-bottom: 96px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--transition-duration) var(--transition-funct);
 }
 
-.section-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
+.backdrop.is-hidden .modal {
+    transform: translate (-50%, -50%) scale(0);
+}
+
+.modal-close-btn {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: var(--text-footer);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 24px;
+    right: 24px;
+
+    transition: background-color var(--transition-duration) var(--transition-funct);
+}
+
+.icon-modal-close {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-title {
+    margin-bottom: 16px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.02em;
-    text-transform: capitalize;
     color: var(--logo-color-second);
+}
 
-    margin-bottom: 72px;
-    margin-top: 0px;
+.modal-field {
+    margin-bottom: 8px;
+}
 
-} */
+.input-wrap {
+    position: relative;
 
+}
 
+.modal-label-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--color-icon);
 
-/* @media screen and (max-width: 768px) {
+    display: inline-block;
+    margin-bottom: 4px;
+}
 
-    .sm-hide {
-        display: none;
-    }
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
 
-    .nav {
-        display: none;
-    }
+    /* margin-bottom: 8px; */
+    padding-left: 34px;
+    font-size: 14px;
+    color: var(--logo-color-second);
+    outline: none;
+    background-color: transparent;
+}
 
-    .contact {
-        display: none;
-    }
-} */
+.modal-input-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
 
-/* @media screen and (max-width: 480px) {
+}
 
-    .sm-hide {
-        display: none;
-    }
+.modal-comment-text {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    outline: transparent;
+    background-color: transparent;
+    resize: none;
 
-    .nav {
-        display: none;
-    }
+    padding-left: 16px;
+    padding-top: 8px;
+    font-size: 14px;
+
+    display: block;
+
+}
+
+textarea::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--color-icon);
+}
+
+.check-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--color-icon);
+
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-top: 18px;
+    margin-bottom: 24px;
+}
+
+.check-text span {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    fill: transparent;
+}
+
+.modal-check:checked+.check-text span {
+    background-color: var(--accent-color);
+    border: none;
+    fill: var(--color-studiofooter-btnprof);
+}
+
+.check-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+    color: var(--logo-color-first);
+}
+
+.modal-send-btn {
     
-    .contact {
-        display: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    display: block;
+    color: var(--color-white-text);
+    cursor: pointer;
+    width: 169px;
+    height: 56px;
+    background-color: var(--logo-color-first);
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    margin: auto;
+}
+
+@media screen and (min-width: 768px) {
+    .modal {
+        width: 408px;
+        padding: 72px 24px 24px;
     }
 
-} */
-
-
-
-
-
-
-/* 
-@media screen and (min-width: 480px) {
-
-    .container {
-        width: 428px
-    }
-
-    .sm-hide {
-        display: none;
-    } */
-
-    /* .nav {
-        display: none;
-    } */
-    
-    /* .contact {
-        display: none;
-    }
-
-} */
-
-/* @media screen and (min-width: 768px) {
-
-    .container {
-        width: 768px
-    }
-
-    .sm-hide {
-        display: none;
-    }
-
-    .nav {
-        display: block;
-    }
-    
-    .contact {
-        display: block;
-    }
-
-
-} */
-/* 
-@media screen and (min-width: 1158px) {
-
-    .container {
-        width: 1158px
-    }
-
-    .sm-hide {
-        display: contents;
-    }
-
-    .nav {
-        display: block;
-    }
-
-    .contact {
-        display: block;
-    }
-
-} */
+}
