--- a/css/stylesmob.css
+++ b/css/stylesmob.css
@@ -138,6 +138,7 @@ img {
         left: 0;
     
         background: var(--color-white-text);
+        box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     
         opacity: 0;
         visibility: hidden;
@@ -294,7 +295,7 @@ img {
     }
 
     .logo {
-        margin-right: 80px;
+        /* margin-right: 80px; */
         
     }
 
@@ -302,6 +303,7 @@ img {
         display: flex;
         gap: 40px;
         /* margin-right: 121px; */
+        margin-left: 80px;
     }
 
     .nav-link {
@@ -406,7 +408,7 @@ img {
 
 .hero {
     background-color: var(--logo-color-second);
-    background-image: var(--color-grad), url(../images/people-office1.jpg);
+    background-image: var(--color-grad), url(../images/people-office-mob1x.jpeg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -418,6 +420,14 @@ img {
     padding-bottom: 112px;
     margin-right: auto;
     margin-left: auto;
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .hero {
+        background-image: var(--color-grad), url('../images/people-office-mob2x.jpeg');
+    }
 }
 
 .main-head {
@@ -898,6 +908,18 @@ img {
     .footer-form {
         justify-content: center;
     }
+
+    .footer-send-btn{
+        margin-top: 16px;
+    }
+
+    .logo {
+        justify-content: center;
+    }
+
+    .soc-subtitle {
+        justify-content: center;
+    }
 }
 
 
@@ -922,7 +944,7 @@ img {
 .logo {
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     
 }
 
@@ -965,7 +987,7 @@ img {
     margin-top: 72px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     
 }
 
@@ -1054,7 +1076,7 @@ img {
 }
 
 .footer-send-btn {
-    margin-top: 16px;
+    /* margin-top: 16px; */
     width: 165px;
     height: 40px;
     padding: 8px 24px;
@@ -1088,9 +1110,6 @@ img {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-
-    
-    
 
     }
 
@@ -1128,13 +1147,55 @@ img {
     .footer-input {
         width: 264px;
     }
+
+    .footer-send-btn {
+        margin-top: 0;
+    }
 }
 
 @media screen and (min-width: 1158px) {
 
-    .footer-form-div {
-
+    .footer {
+        padding-top: 100px;
+        padding-bottom: 100px;
     }
+
+    .container-soc-media-fotter {
+        align-items: baseline;
+    }
+
+    .text-footer-div {
+        width: 264px;
+    }
+
+    .soc-media-div {
+        margin-left: 120px;
+    }
+
+    .soc-media-link {
+        transition: background-color var(--transition-duration) var(--transition-funct);
+    }
+
+    .soc-media-link:hover,
+    .soc-media-link:focus {
+    background-color: var(--accent-color);
+    }
+
+    .footer-form-div {
+        margin-left: auto;
+        margin-top: 0;
+    }
+
+    .footer-send-btn {
+        transition: background-color var(--transition-duration) var(--transition-funct);
+    }
+
+    .footer-send-btn:hover,
+    .footer-send-btn:focus {
+    background-color: var(--accent-color)
+    }
+
+
 }
 
 
