--- a/css/styles.css
+++ b/css/styles.css
@@ -522,7 +522,7 @@ c
 
 .soc-media-link:hover,
 .soc-media-link:focus {
-    background-color: #31D0AA;
+    background-color:  ;
 }
 
 .footer-form-div {
