--- a/css/stylesmob.css
+++ b/css/stylesmob.css
@@ -361,6 +361,7 @@ img {
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: var(--primary-text-color);
+        font-style: normal;
     
         transition: color var(--transition-duration) var(--transition-funct);
     }
@@ -529,7 +530,15 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 
 .section-about {
     padding-top: 96px;
-    padding-bottom: 24px;
+    padding-bottom: 96px;
+}
+
+.list-about-item {
+    margin-bottom: 72px;
+}
+
+.list-about-item:last-child {
+    margin-bottom: 0;
 }
 
 .title-about-item {
@@ -552,9 +561,11 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 
-    margin-bottom: 72px;
+    /* margin-bottom: 72px; */
     margin-top: 0;
 }
+
+
 
 .visually-hidden {
     position: absolute;
@@ -584,15 +595,19 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
         display: flex;
         flex-wrap: wrap;
         gap: var(--card-gap);
+        row-gap: 72px;
     }
 
     .title-about-item {
         text-align: left;
+    
     }
 
     .list-about-item {
         flex-basis: calc((100% - 1 * 24px) / 2);
+        margin-bottom: 0;
     }
+    
 
 }
 
@@ -846,7 +861,10 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 }
 
 .customers-list-item {
-    width: 190px;
+    /* width: 190px; */
+    width: calc((100% - 16px) / 2);
+    height: 88px;
+
 }
 
 .customers-list-link {
@@ -910,21 +928,24 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 
 @media screen and (min-width: 0px) and (max-width: 767px) {
     .container-soc-media-fotter {
-        justify-content: center;
+        /* justify-content: center; */
+        /* align-items: center; */
     }
 
     .footer-form-div {
-        margin-left: auto;
+        /* margin-left: auto;
         margin-right: auto;
-        width: 100%;
+        width: 100%; */
     }
 
     .footer-form-title {
-        justify-content: center;
+        /* justify-content: center; */
+        /* align-items: center; */
     }
 
     .footer-form {
-        justify-content: center;
+        /* justify-content: center; */
+        /* align-items: center; */
     }
 
     .footer-send-btn{
@@ -932,11 +953,13 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     }
 
     .logo {
-        justify-content: center;
+        /* justify-content: center; */
+        /* align-items: center; */
     }
 
     .soc-subtitle {
-        justify-content: center;
+        /* justify-content: center; */
+        /* align-items: center; */
     }
 }
 
@@ -945,14 +968,13 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     background-color: var(--logo-color-second);
     padding-top: 96px;
     padding-bottom: 96px;
-
 }
 
 .container-soc-media-fotter {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
 
-    align-items: center;
+    /* align-items: center; */
     /* justify-content: center; */
     /* margin-right: auto;
     margin-left: auto; */
@@ -960,11 +982,12 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 }
 
 .logo {
-    display: flex;
-    align-items: center;
+    /* display: flex; */
+    /* text-align: center; */
     /* justify-content: center; */
     
 }
+
 
 .logo-footer {
     font-family: var(--secondary-font);
@@ -979,6 +1002,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 
 .text-footer-div {
     width: 268px;
+    /* text-align: center; */
 }
 
 .text-footer {
@@ -991,9 +1015,9 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     margin-top: 16px;
 }
 
-/* .soc-media-div {
-    width: 208px;
-} */
+.soc-media-div {
+    margin-top: 72px;
+}
 
 .soc-subtitle {
     font-weight: 500;
@@ -1002,9 +1026,11 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     letter-spacing: 0.02em;
     color: #FFFFFF;
 
-    margin-top: 72px;
-    display: flex;
-    align-items: center;
+    /* text-align: center; */
+
+    /* margin-top: 72px; */
+    /* display: flex; */
+    /* align-items: center; */
     /* justify-content: center; */
     
 }
@@ -1043,6 +1069,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     margin-right: auto; */
     margin-top: 72px;
     /* width: 100%; */
+    /* text-align: center; */
 }
 
 .footer-form-title {
@@ -1052,18 +1079,19 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     letter-spacing: 0.02em;
     color: var(--color-white-text);
 
-    display: flex;
+    /* display: flex; */
     /* justify-content: center; */
-    align-items: center;
+    /* align-items: center; */
 
     margin-bottom: 16px;
 }
 
 .footer-form {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     /* justify-content: center; */
-    align-items: center;
+    /* align-items: center; */
+    
 }
 
 .footer-input {
@@ -1074,7 +1102,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     font-size: 14px;
-    /* color: var(--color-white-text); */
+    color: var(--color-white-text);
     outline: none;
     border-radius: 4px;
     padding-left: 16px;
@@ -1103,6 +1131,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
+    align-items: center;
 
     color: var(--color-white-text);
     background-color: #4D5AE5;
@@ -1117,9 +1146,12 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 
 @media screen and (min-width: 768px) {
 
-    .footer {
-        
-        
+    .container-soc-media-fotter {
+        padding-left: 110px;
+    }
+
+    .soc-media-div {
+        margin-top: 0;
     }
 
     .container-soc-media-fotter {
@@ -1174,13 +1206,17 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 
 @media screen and (min-width: 1158px) {
 
+    .container-soc-media-fotter {
+        padding-left: 0;
+    }
+    
     .footer {
         padding-top: 100px;
         padding-bottom: 100px;
     }
 
     .container-soc-media-fotter {
-        align-items: baseline;
+        flex-wrap: nowrap;
     }
 
     .text-footer-div {
@@ -1197,7 +1233,7 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 
     .soc-media-link:hover,
     .soc-media-link:focus {
-    background-color: var(--accent-color);
+    background-color: #31D0AA;
     }
 
     .footer-form-div {
